# euroscipy2025

./: Dockerfile  README.md  erdos1_plainpython.py  erdos2_typeddict.py  erdos3_pydantic.py  erdos4_dataframe.py  erdos5_pandera.py  esp2025_articles.ndjson  esp2025_authors.ndjson  esp2025_authors_buggy.ndjson  familiarize_dataframe.ipynb  familiarize_plainpython.ipynb  pyproject.toml  requirements.txt
images/: data_model.drawio
