[project]
name = "tutorial"
version = "0.1.0"
description = "Annotating the dynamic: Type Annotation for DataFrames. A tutorial presented at EuroSciPy 2025 in Krakow"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pandera>=0.26.0",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
    "scipy-stubs>=1.16.1.0",
]
